[package]
name = "graphein"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.0", features = ["derive", "cargo"]}
pdbtbx = "0.10.2"
petgraph = {version="0.6.3", features = ["serde-1"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
glob = "0.3.1"
anyhow = "1.0.71"
log = "0.4.18"
env_logger = "0.10.0"
rayon = "1.7.0"